--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Croissant+One&display=swap');
+
 body {
     padding: 10px;
     background-color: #000014;
